force-app/main/default/objects/Student_Projects__c/Student_Projects__c.object-meta.xml
<CustomObject>
    <label>Student_Project</label>
    <nameField>
        <label>Student Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student_Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>