force-app/main/default/objects/Student_Projects__c/fields/Apple_Color__c.field-meta.xml
<CustomField>
    <fullName>Apple_Color__c</fullName>
    <description>Apple color</description>
    <label>Apple Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>