force-app/main/default/objects/Student_Projects__c/fields/AppleCondition__c.field-meta.xml
<CustomField>
    <fullName>AppleCondition__c</fullName>
    <formula>IF(
 OR(
 ISPICKVAL( Apple_Color__c ,&quot;Red&quot;), 
ISPICKVAL( Apple_Color__c ,&quot;Orange&quot;), 
 ISPICKVAL( Apple_Color__c , &quot;Yellow&quot;)),
 
&quot;Do Not Eat&quot;,
&quot;Throw it in dustbin&quot;


)</formula>
    <label>AppleCondition</label>
    <type>Text</type>
</CustomField>