force-app/main/default/objects/Student_Projects__c/fields/Status_of_Student__c.field-meta.xml
<CustomField>
    <fullName>Status_of_Student__c</fullName>
    <label>Status of Student</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>InActive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>