force-app/main/default/objects/Student_Projects__c/fields/Status_Project__c.field-meta.xml
<CustomField>
    <fullName>Status_Project__c</fullName>
    <description>Status of the Project</description>
    <label>Status_Project</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>