force-app/main/default/objects/Student_Projects__c/fields/Student_Project1__c.field-meta.xml
<CustomField>
    <fullName>Student_Project1__c</fullName>
    <label>Student_Project1</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>