force-app/main/default/objects/Student_Projects__c/fields/Student_Project2__c.field-meta.xml
<CustomField>
    <fullName>Student_Project2__c</fullName>
    <label>Student_Project2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>