force-app/main/default/objects/Student_Projects__c/fields/Traffic_Lights__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Lights__c</fullName>
    <formula>IMAGE( 
CASE(Status_Project__c, 
&quot;Green&quot;, &quot;/img/samples/light_green.gif&quot;,
&quot;Yellow&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;status color&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Traffic Lights</label>
    <type>Text</type>
</CustomField>