force-app/main/default/objects/Student_Projects__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Apple_Color__c</columns>
    <columns>AppleCondition__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>